# GraphectoryCausality

./: .gitignore  LICENSE  README.md  pyproject.toml  tmp_openhands_stats.json  tmp_openhands_stats_small.json
data/LCP/: phases_lcp_matrix.txt
data/OpenHands/analysis/claude-sonnet-4/: trajectory_metrics.csv
data/OpenHands/analysis/deepseek-r1-0528/: trajectory_metrics.csv
data/OpenHands/analysis/deepseek-v3/: trajectory_metrics.csv
data/OpenHands/analysis/devstral-small/: trajectory_metrics.csv
data/SWE-agent/analysis/claude-sonnet-4/: trajectory_metrics.csv
data/SWE-agent/analysis/deepseek-r1-0528/: trajectory_metrics.csv
data/SWE-agent/analysis/deepseek-v3/: trajectory_metrics.csv
data/SWE-agent/analysis/devstral-small/: trajectory_metrics.csv
data/samples/OpenHands/graphs/claude-sonnet-4/astropy__astropy-13453/: astropy__astropy-13453.json
data/samples/OpenHands/graphs/claude-sonnet-4/django__django-15731/: django__django-15731.json
data/samples/OpenHands/graphs/claude-sonnet-4/matplotlib__matplotlib-24970/: matplotlib__matplotlib-24970.json
data/samples/SWE-agent/graphs/deepseek-v3/astropy__astropy-13453/: astropy__astropy-13453.json
data/samples/SWE-agent/graphs/deepseek-v3/django__django-10973/: django__django-10973.json
data/samples/SWE-agent/graphs/deepseek-v3/sympy__sympy-19783/: sympy__sympy-19783.json
data/samples/SWE-agent/reports/: deepseek-chat.json
data/samples/mini-swe-agent-v1.0/graphs/gpt-5-mini/django__django-10880/: django__django-10880.json
data/samples/mini-swe-agent-v1.0/reports/: gpt-5-mini.json
graph_construction/: README.md  buildGraph.py  commandParser.py  generatejson.py  graph_renderer.js  graph_template.html  live_graph_server.py  mapPhase.py  styles.css  visualizer.py
graph_construction/server/: bayesian_analysis.py  framework_comparison.py  graph_builder.py  graph_renderer.py  handler.py
graph_construction/server/static/: browser.css  browser.js  index.html
lang_construction/: get_lang.py
languatory/: buildPhases.py  computeLCP.py  extractSeq.py  generate_LCPs.py
plot/: end_phase_plot.py  sankey_phase_transition_plot.py  trajectory_heatmap_plot.py
(+11 files in other folders)
