[build-system]
requires = ["setuptools>=75.8.0", "wheel>=0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "trajectory-analysis"
version = "0.1.0"
description = "Trajectory analysis tools for SWE-agent and OpenHands"
requires-python = ">=3.12"
dependencies = [
    "bashlex>=0.18",
    "datasets>=4.6.0",
    "matplotlib>=3.10.0",
    "networkx>=3.5",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pygraphviz>=1.7",
    "pyyaml>=6.0.2",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
]

[tool.setuptools]
packages = ["graph_construction", "graph_analysis", "lang_construction"]

[project.optional-dependencies]
ml = [
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "tokenizers>=0.21.1",
    "safetensors>=0.5.3",
]
notebook = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.3",
    "ipywidgets>=8.1.7",
    "nbconvert>=7.16.6",
]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

# Note: dagre@0.8.5 (JS) loaded from unpkg.com at render time